common/force-app/main/default/objects/Referral_Distribution_Agreement__c/Referral_Distribution_Agreement__c.object-meta.xml
<CustomObject>
    <description>Applications to become a Referral Partner or Distribution Partner</description>
    <label>Referral/Distribution Agreement</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral/Distribution Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>