common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/Capital_Manager__c.field-meta.xml
<CustomField>
    <fullName>Capital_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capital Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Distribution_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>