common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dfsle__EnvelopeStatus__c</referenceTo>
    <relationshipLabel>Referral/Distribution Agreements</relationshipLabel>
    <relationshipName>Referral_Distribution_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>