common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <formula>ADDMONTHS( NewInvestor3__r.Date_of_first_Investment__c, 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor 3 Expiry Date</label>
    <type>Date</type>
</CustomField>