common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/Investor_1_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Investor_1_Expiry_Date__c</fullName>
    <formula>ADDMONTHS( New_Investor_1__r.Date_of_first_Investment__c, 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor 1 Expiry Date</label>
    <type>Date</type>
</CustomField>