common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/New_Investor_1__c.field-meta.xml
<CustomField>
    <fullName>New_Investor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Investor 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral/Distribution Agreements</relationshipLabel>
    <relationshipName>Referral_Distribution_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>