common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/New_Investor_2__c.field-meta.xml
<CustomField>
    <fullName>New_Investor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Investor 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral/Distribution Agreements (New Investor 2)</relationshipLabel>
    <relationshipName>Referral_Distribution_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>