common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/New_Investor_4__c.field-meta.xml
<CustomField>
    <fullName>New_Investor_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Investor 4</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral/Distribution</relationshipLabel>
    <relationshipName>Referral_Distribution_Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>