common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/NewInvestor3__c.field-meta.xml
<CustomField>
    <fullName>NewInvestor3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Investor 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral/Distribution Agreements (New Investor 3)</relationshipLabel>
    <relationshipName>Referral_Distribution_Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>