common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/ReferralPartner__c.field-meta.xml
<CustomField>
    <fullName>ReferralPartner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Referral Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referral/Distribution Agreements</relationshipLabel>
    <relationshipName>Referral_Distribution_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>