common/force-app/main/default/objects/Referral_Distribution_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Sent</fullName>
            </value>
            <value>
                <fullName>Application Received</fullName>
            </value>
            <value>
                <fullName>Application Resent</fullName>
            </value>
            <value>
                <fullName>Application Approved</fullName>
            </value>
            <value>
                <fullName>Application Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>